--- a/pom.xml
+++ b/pom.xml
@@ -12,20 +12,20 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <eventchain.version>3.1.3</eventchain.version>
-        <api.version>2.1.1</api.version>
+        <eventchain.version>3.1.4</eventchain.version>
+        <api.version>2.1.2</api.version>
 
         <bukkit.version>1.8-R0.1-SNAPSHOT</bukkit.version>
         <bungee.version>1.8-SNAPSHOT</bungee.version>
-        <jda.version>4.2.0_247</jda.version>
+        <jda.version>5.0.0-beta.1</jda.version>
         <kitteh.version>8.0.0</kitteh.version>
         <kyori-event.version>3.0.0</kyori-event.version>
         <pi4j.version>1.3</pi4j.version>
-        <sponge.version>7.3.0</sponge.version>
-        <velocity.version>3.0.1</velocity.version>
+        <sponge.version>9.0.0</sponge.version>
+        <velocity.version>3.1.1</velocity.version> <!-- NOTE: update javadoc version below when updating this version -->
 
-        <jetbrains.version>22.0.0</jetbrains.version>
-        <junit.version>5.8.1</junit.version>
+        <jetbrains.version>23.0.0</jetbrains.version>
+        <junit.version>5.9.0</junit.version>
     </properties>
 
     <profiles>
@@ -42,6 +42,15 @@
             <id>jdk-11-config</id>
             <activation>
                 <jdk>11</jdk>
+            </activation>
+            <properties>
+                <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+            </properties>
+        </profile>
+        <profile>
+            <id>jdk-17-config</id>
+            <activation>
+                <jdk>17</jdk>
             </activation>
             <properties>
                 <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
@@ -77,9 +86,20 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>3.4.1</version>
                 <configuration>
-                    <source>8</source>
+                    <source>17</source>
+                    <links>
+                        <link>https://javadoc.io/doc/net.dv8tion/JDA/${jda.version}/</link>
+                        <link>https://kittehorg.github.io/KittehIRCClientLib/${kitteh.version}/</link>
+                        <link>https://javadoc.io/doc/net.kyori/event-api/${kyori-event.version}/</link>
+                        <link>https://pi4j.com/${pi4j.version}/apidocs/</link>
+                        <link>https://jd.spongepowered.org/spongeapi/${sponge.version}/</link>
+                        <link>https://jd.papermc.io/velocity/3.0.0/</link>
+
+                        <link>https://javadoc.io/doc/org.jetbrains/annotations/${jetbrains.version}/</link>
+                        <link>https://junit.org/junit5/docs/${junit.version}/api/</link>
+                    </links>
                 </configuration>
                 <executions>
                     <execution>
@@ -88,13 +108,28 @@
                             <goal>jar</goal>
                         </goals>
                     </execution>
+                    <execution>
+                        <id>aggregate</id>
+                        <phase>site</phase>
+                        <goals>
+                            <goal>aggregate</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>resource-bundles</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>resource-bundle</goal>
+                            <goal>test-resource-bundle</goal>
+                        </goals>
+                    </execution>
                 </executions>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.0.0-M3</version>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>enforce-maven</id>
@@ -124,7 +159,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
-                <version>3.0.0-M1</version>
+                <version>3.0.0</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
